# ai-termchat

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
.triadchat-test-config/triadchat/: config.toml
docs/: EVAL.md  IDEA.md  PLAN.md  PROMPT.md  SPEC.md
docs/plans/: issue-100-transfer-progress.md  issue-110-secure-transfer.md
scripts/: README.md  dev-workflow.sh  test-dev-workflow.sh
src/: action.rs  config.rs  encoder.rs  lib.rs  main.rs  message.rs  renderer.rs  secure.rs  state.rs  terminal_events.rs  ui.rs  util.rs
src/ai/: classifier.rs  mod.rs  parser.rs  prompt.rs  sidecar.rs  trigger.rs
src/application/: mod.rs
src/avatar/: builtin.rs  loader.rs  mod.rs
src/commands/: ai_cmd.rs  art_cmd.rs  avatar_cmd.rs  mod.rs  peer_cmd.rs  room_cmd.rs  send_file.rs  skill_cmd.rs  summary_cmd.rs  transfer_cmd.rs
src/room/: member.rs  mod.rs  transcript.rs
src/skill/: executor.rs  registry.rs
src/ui/: layout.rs  messages.rs  peers_panel.rs  room_list_panel.rs  status_panel.rs
tests/: art_dictionary.rs  avatar_builtin.rs  avatar_commands.rs  avatar_plugin.rs  classifier_test.rs  docs_consistency.rs  net_message_phase1.rs  network_encryption.rs  network_integration.rs  peer_identity.rs  peer_trust_room_branches.rs  phase0_basics.rs  phase0_commands_e2e.rs  phase1_commands_e2e.rs  plan_status.rs  prompt_quality.rs  room_engine.rs  room_list_panel.rs  runtime_signal.rs  security_issue79.rs  send_file.rs  sidecar_mock.rs  skill_confirmation_messages.rs  skill_executor.rs  skill_registry.rs  transcript.rs  trigger_test.rs  ui_layout.rs  video_removed.rs
tests/common/: mod.rs
