[package]
name = "triadchat"
version = "0.1.0"
authors = ["lemunozm <lemunozm@gmail.com>"]
description = "Terminal chat with a built-in AI clerk"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/takurot/ai-termchat"
repository = "https://github.com/takurot/ai-termchat"
keywords = ["network", "chat", "lan", "terminal", "ai"]
categories = ["command-line-utilities", "command-line-interface"]

[badges]
maintenance = { status = "passively-maintenance" }

[dependencies]
message-io = { default-features = false, features = ["udp", "tcp"], version = "0.14" }
bincode = "1.3.3"
serde = { version = "1.0.124", features = ["derive"] }
crossterm = "0.18.2"
tui = { version = "0.14.0", default-features = false, features = ['crossterm', 'serde'] }
whoami = "1.1.0"
chrono = "0.4.19"
clap = { version = "4", features = ["derive"] }
unicode-width = "0.1.8"
shellwords = "1.1.0"
shellexpand = "2.1.0"
toml = "0.5.8"
dirs-next = "2.0.0"
rgb = {version="0.8.25", features=["serde"]}
resize = "0.7.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "4"
sha2 = "0.10"
libloading = { version = "0.8", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8.3"
tempfile = "3"

[features]
ui-test = []
# Enable FFI-based avatar plugin loading via libloading. Disabled by default
# to avoid pulling in dynamic linking dependencies in standard builds.
avatar-ffi = ["libloading", "libc"]
